--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<body>
-		<h1>
-		hi how are you</h1>
-	</body>
-</head></html>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
