--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>My First Hethuidsifsading</h1>
 <p>My first paragraph.</p>
-<a href="chance.html">Chance</a>
+<a href="chance.html">Chance Cards</a>
 
 </body>
 </html>
