--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1>My First Hethuidsifsading</h1>
 <p>My first paragraph.</p>
 <a href="chance.html">Chance Cards</a>
-<a href="chance.html">Community Chest</a>
+<a href="community_chest.html">Community Chest</a>
 </body>
 </html>
