--- a/chance.html
+++ b/chance.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>My First Hethuidsifsading</h1>
-<p>My first paragraph.</p>
-
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<title>Chance</title>
+		<link href="style.css" rel="stylesheet">
+    		<script src="script.js"></script>
+    	<link rel="stylesheet" href="https://use.typekit.net/lnl6cus.css">
+	</head>
+	<body>
+		<div class="mainpage">
+	</div>
 </body>
 </html>
