--- a/chance.html
+++ b/chance.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="mainpage">
-			<div class="innerbox"><h1>HI</h1></div>
+			<div class="innerbox"><p>CHANCE</p></div>
 	</div>
 </body>
 </html>
