--- a/chance.html
+++ b/chance.html
@@ -10,7 +10,9 @@
 	</head>
 	<body>
 		<div class="mainpage">
-			<div class="innerbox"><p>CHANCE</p></div>
+			<div class="innerbox"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+			</div>
 	</div>
 </body>
 </html>
