--- a/chance.html
+++ b/chance.html
@@ -12,6 +12,7 @@
 		<div class="mainpage">
 			<div class="innerbox"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH PLAYER 50 GB</h2>
 			</div>
 	</div>
 </body>
