--- a/chance.html
+++ b/chance.html
@@ -12,9 +12,8 @@
 		<div class="mainpage">
 			<div class="innerbox"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH PLAYER
-					<BR>
-					<h3>50 GB</h3>
+				<h2>PAY EACH
+					<BR>PLAYER <h3>50 GB</h3>
 				</h2>
 			</div>
 	</div>
