--- a/chance.html
+++ b/chance.html
@@ -13,7 +13,8 @@
 			<div class="innerbox"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
-					<BR>PLAYER <h3>50 GB</h3>
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
 				</h2>
 			</div>
 	</div>
