--- a/chance.html
+++ b/chance.html
@@ -10,13 +10,131 @@
 	</head>
 	<body>
 		<div class="mainpage">
-			<div class="innerbox"><h1>CHANCE</h1>
+
+			<div class="chance1"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
 					<BR>PLAYER
 					<BR><h3>50 GB</h3>
 				</h2>
 			</div>
+
+		<!--
+
+			<div class="chance2"><h1>CHANCE</h1>
+				<p>YOUR CLOUD RAN OUT OF DATA SPACE. PURCHASE MORE STORAGE</p>
+				<h3>PAY EACH 100 GB.</h3>
+			</div>
+
+
+			<div class="chance3"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance4"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance5"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+
+			<div class="chance6"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance7"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+
+			<div class="chance8"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance9"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance10"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance11"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance12"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance13"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance14"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+			<div class="chance15"><h1>CHANCE</h1>
+				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+				<h2>PAY EACH
+					<BR>PLAYER
+					<BR><h3>50 GB</h3>
+				</h2>
+			</div>
+
+		-->
+
 	</div>
 </body>
 </html>
