--- a/chance.html
+++ b/chance.html
@@ -11,6 +11,8 @@
 	<body>
 		<div class="mainpage">
 
+			<!--
+
 			<div class="chance1"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
@@ -19,22 +21,27 @@
 				</h2>
 			</div>
 
-		<!--
+	
 
 			<div class="chance2"><h1>CHANCE</h1>
 				<p>YOUR CLOUD RAN OUT OF DATA SPACE. PURCHASE MORE STORAGE</p>
-				<h3>PAY EACH 100 GB.</h3>
+				<h3>PAY 100 GB.</h3>
 			</div>
+
+				-->
 
 
 			<div class="chance3"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>YOU RECENTLY UPDATED SOFTWARE ON ALL YOUR SMART DEVICES</p>
+				<h2>FOR EACH
+					<BR>OFFICE</h2>
+					<BR><h3>PAY GB 25.</h3>
+					<BR><h2>FOR EACH
+					<BR>HEADQUARTER,</h2>
+					<BR><h3>PAY GB 100.</h3>
 			</div>
 
+<!--
 			<div class="chance4"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
@@ -132,8 +139,7 @@
 					<BR><h3>50 GB</h3>
 				</h2>
 			</div>
-
-		-->
+	-->
 
 	</div>
 </body>
