--- a/chance.html
+++ b/chance.html
@@ -33,11 +33,9 @@
 
 			<div class="chance3"><h1>CHANCE</h1>
 				<p>YOU RECENTLY UPDATED SOFTWARE ON ALL YOUR SMART DEVICES</p>
-				<h2>FOR EACH
-					<BR>OFFICE</h2>
+				<h2>FOR EACH OFFICE</h2>
 					<BR><h3>PAY GB 25.</h3>
-					<BR><h2>FOR EACH
-					<BR>HEADQUARTER,</h2>
+					<BR><h2>FOR EACH HEADQUARTER,</h2>
 					<BR><h3>PAY GB 100.</h3>
 			</div>
 
