--- a/chance.html
+++ b/chance.html
@@ -28,7 +28,7 @@
 				<h3>PAY 100 GB.</h3>
 			</div>
 
-				-->
+				
 
 
 			<div class="chance3"><h1>CHANCE</h1>
@@ -40,15 +40,14 @@
 					<BR><h3>PAY GB 100.</h3>
 			</div>
 
+-->
+            <div class="chance4"><h1>CHANCE</h1>
+				<p>PASSWORD TO HACK OUT OF CYBER SECURITY</p>
+				<h4>********</h4>
+					<BR><p>TAKE A SCREENSHOT. THE IMAGE CAN BE USED <span class="pbold">ONCE</span> TO GET OUT OF CYBER SECURITY.</p>
+				</div>
+			
 <!--
-			<div class="chance4"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
-			</div>
-
 			<div class="chance5"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
