--- a/chance.html
+++ b/chance.html
@@ -51,7 +51,8 @@
 			<div class="chance5"><h1>CHANCE</h1>
 				<p>GO TO CYBER SECURITY. DO NOT PASS GO.</p>
 				<h3>DO NOT
-					<BR>COLLECT 200 GB.</h3>
+					<BR>COLLECT
+					<BR>200 GB.</h3>
 				</h2>
 			</div>
 
