--- a/chance.html
+++ b/chance.html
@@ -47,7 +47,7 @@
 					<BR><p>TAKE A SCREENSHOT. THE IMAGE CAN BE USED <span class="pbold">ONCE</span> TO GET OUT OF CYBER SECURITY.</p>
 				</div>
 			
--->
+
 			<div class="chance5"><h1>CHANCE</h1>
 				<p>GO TO CYBER SECURITY. DO NOT PASS GO.</p>
 				<h3>DO NOT
@@ -55,15 +55,12 @@
 				</h2>
 			</div>
 
-<!--
+-->
 			<div class="chance6"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>YOUR SMART OFFICE SET-UP INCREASED EFFICIENCY BY REDUCING ENERGY CONSUMPTION</p>
+				<h5>COLLECT 150 GB</h5>
 			</div>
-
+<!--
 			<div class="chance7"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
