--- a/chance.html
+++ b/chance.html
@@ -55,27 +55,26 @@
 				</h2>
 			</div>
 
--->
+
 			<div class="chance6"><h1>CHANCE</h1>
 				<p>YOUR SMART OFFICE SET-UP INCREASED EFFICIENCY BY REDUCING ENERGY CONSUMPTION</p>
 				<h5>COLLECT 150 GB</h5>
 			</div>
-<!--
+-->
 			<div class="chance7"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>DATA GRAB!
+				<p>Take all GB 100 bills from the database, and throw them in the air!</p>
+					<p>All players race to catch them.</p>
+					<p>Keep what you catch.</p>
+				</P>
 			</div>
 
+<!--
 
 			<div class="chance8"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p>
+				<BR><p>IF YOU PASS GO,</p>
+					<h5>COLLECT 200 GB</h5>
 			</div>
 
 			<div class="chance9"><h1>CHANCE</h1>
