--- a/chance.html
+++ b/chance.html
@@ -60,7 +60,7 @@
 				<p>YOUR SMART OFFICE SET-UP INCREASED EFFICIENCY BY REDUCING ENERGY CONSUMPTION</p>
 				<h5>COLLECT 150 GB</h5>
 			</div>
--->
+
 			<div class="chance7"><h1 span class="h1lesspadding">CHANCE</span></h1>
 				<p>DATA GRAB!
 				<p>Take all GB 100 bills from the database, and throw them in the air!</p>
@@ -69,14 +69,14 @@
 				</P>
 			</div>
 
-<!--
+-->
 
 			<div class="chance8"><h1>CHANCE</h1>
 				<p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p>
-				<BR><p>IF YOU PASS GO,</p>
+				<BR><h6>IF YOU PASS GO,</h6>
 				<BR><h5>COLLECT 200 GB</h5>
 			</div>
-
+<!--
 			<div class="chance9"><h1>CHANCE</h1>
 				<p>ADVANCE TO THE TESLA SHOWROOM.</p>
 				<BR><p>IF YOU PASS GO,</p>
