--- a/chance.html
+++ b/chance.html
@@ -73,13 +73,13 @@
 
 			<div class="chance8"><h1>CHANCE</h1>
 				<p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p>
-				<BR><h6>IF YOU PASS GO,</h6>
-				<BR><h5>COLLECT 200 GB</h5>
+				<BR><h5>IF YOU PASS GO,
+				<BR>COLLECT 200 GB</h5> 
 			</div>
 <!--
 			<div class="chance9"><h1>CHANCE</h1>
 				<p>ADVANCE TO THE TESLA SHOWROOM.</p>
-				<BR><p>IF YOU PASS GO,</p>
+				<BR><h6>IF YOU PASS GO,</h6>
 				<BR><h5>COLLECT 200 GB</h5>
 			</div>
 
