--- a/chance.html
+++ b/chance.html
@@ -73,8 +73,7 @@
 
 			<div class="chance8"><h1>CHANCE</h1>
 				<p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p>
-				<BR><h5>IF YOU PASS GO
-					<BR>COLLECT 200 GB</h5> 
+				<BR><h5>IF YOU PASS GO COLLECT 200 GB</h5> 
 			</div>
 <!--
 			<div class="chance9"><h1>CHANCE</h1>
