--- a/chance.html
+++ b/chance.html
@@ -73,7 +73,7 @@
 
 			<div class="chance8"><h1>CHANCE</h1>
 				<p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p>
-				<BR><h5>IF YOU PASS GO COLLECT 200 GB</h5> 
+				<BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
 			</div>
 
 			<div class="chance9"><h1>CHANCE</h1>
@@ -86,20 +86,16 @@
 				<p><span class="pbold">(.COM, .EDU)</span>
 				<BR>IF OWNED, PAY THE OWNER 10 TIMES YOUR ROLL</p>
 			</div>
--->
+
 			<div class="chance11"><h1>CHANCE</h1>
 				<p>ADVANCEMENT TO ROYAL DUTCH SHELL.</p>
 				<BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
 			</div>
-<!--
+-->
 			<div class="chance12"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>GO BACK THREE SPACES.</p>
 			</div>
-
+<!--
 			<div class="chance13"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
