--- a/chance.html
+++ b/chance.html
@@ -91,19 +91,16 @@
 				<p>ADVANCEMENT TO ROYAL DUTCH SHELL.</p>
 				<BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
 			</div>
--->
+
 			<div class="chance12"><h1>CHANCE</h1>
 				<p>GO BACK THREE SPACES.</p>
 			</div>
-<!--
+-->
 			<div class="chance13"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>ADVANCE TO THE NEAREST DATA-CENTRE</p>
+				<p>If owned, give the owner twice the data amount to which they are otherwise entitled.</p>
 			</div>
-
+<!--
 			<div class="chance14"><h1>CHANCE</h1>
 				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
 				<h2>PAY EACH
