--- a/chance.html
+++ b/chance.html
@@ -95,23 +95,20 @@
 			<div class="chance12"><h1>CHANCE</h1>
 				<p>GO BACK THREE SPACES.</p>
 			</div>
--->
+
 			<div class="chance13"><h1>CHANCE</h1>
 				<p>ADVANCE TO THE NEAREST<BR>DATA-CENTRE</p>
 				<p>If owned, give the owner twice the data amount to which they are otherwise entitled.</p>
 			</div>
-<!--
+-->
 			<div class="chance14"><h1>CHANCE</h1>
 				<h5>ADVANCE TO GO COLLECT 200 GB.</h5>
 			</div>
-
+	<!--
 			<div class="chance15"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
+				<p>ADVANCE TO IBM</p>
 			</div>
+		
 	-->
 
 	</div>
