--- a/chance.html
+++ b/chance.html
@@ -106,7 +106,7 @@
 			</div>
 	-->
 			<div class="chance15"><h1>CHANCE</h1>
-				<p>ADVANCE TO IBM</p>
+				<p>ADVANCE TO <BR>IBM</p>
 			</div>
 		
 
