--- a/chance.html
+++ b/chance.html
@@ -1,147 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<title>Chance</title>
-		<link href="style.css" rel="stylesheet">
-    		<script src="script.js"></script>
-    	<link rel="stylesheet" href="https://use.typekit.net/lnl6cus.css">
-	</head>
-	<body>
-		<div class="mainpage">
-
-			<!--
-
-			<div class="chance1"><h1>CHANCE</h1>
-				<p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
-				<h2>PAY EACH
-					<BR>PLAYER
-					<BR><h3>50 GB</h3>
-				</h2>
-			</div>
-
-
-	
-
-			<div class="chance2"><h1>CHANCE</h1>
-				<p>YOUR CLOUD RAN OUT OF DATA SPACE. PURCHASE MORE STORAGE</p>
-				<h3>PAY 100 GB.</h3>
-			</div>
-
-				
-
-
-			<div class="chance3"><h1>CHANCE</h1>
-				<p>YOU RECENTLY UPDATED SOFTWARE ON ALL YOUR SMART DEVICES</p>
-				<h2>FOR EACH OFFICE</h2>
-					<BR><h3>PAY 25 GB.</h3>
-					<BR>
-					<BR><h2>FOR EACH HEADQUARTER,</h2>
-					<BR><h3>PAY 100 GB.</h3>
-			</div>
-
-
-
-
-            <div class="chance4"><h1>CHANCE</h1>
-				<p>PASSWORD TO HACK OUT OF CYBER SECURITY</p>
-				<h4>********</h4>
-					<BR><p>TAKE A SCREENSHOT. THE IMAGE CAN BE USED <span class="pbold">ONCE</span> TO GET OUT OF CYBER SECURITY.</p>
-				</div>
-			
-
-
-
-			<div class="chance5"><h1>CHANCE</h1>
-				<p>GO TO CYBER SECURITY. DO NOT PASS GO.</p>
-				<h3>DO NOT
-					<BR>COLLECT 200 GB.</h3>
-				</h2>
-			</div>
-
-
-
-
-			<div class="chance6"><h1>CHANCE</h1>
-				<p>YOUR SMART OFFICE SET-UP INCREASED EFFICIENCY BY REDUCING ENERGY CONSUMPTION</p>
-				<h5>COLLECT 150 GB</h5>
-			</div>
-
-
-
-
-			<div class="chance7"><h1 span class="h1lesspadding">CHANCE</span></h1>
-				<p>DATA GRAB!
-				<p>Take all GB 100 bills from the database, and throw them in the air!</p>
-					<p>All players race to catch them.</p>
-					<p>Keep what you catch.</p>
-				</P>
-			</div>
-
-
-
-
-			<div class="chance8"><h1>CHANCE</h1>
-				<p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p>
-				<BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
-			</div>
-
-
-
-
-			<div class="chance9"><h1>CHANCE</h1>
-				<p>ADVANCE TO THE TESLA SHOWROOM.</p>
-				<BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
-			</div>
-
-
-
-
-			<div class="chance10"><h1>CHANCE</h1>
-				<p>ADVANCE TO THE NEAREST WEB DOMAIN</p>
-				<p><span class="pbold">(.COM, .EDU)</span>
-				<BR>IF OWNED, PAY THE OWNER 10 TIMES YOUR ROLL</p>
-			</div>
-
-
-
-
-			<div class="chance11"><h1>CHANCE</h1>
-				<p>ADVANCEMENT TO ROYAL DUTCH SHELL.</p>
-				<BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
-			</div>
-
-
-
-
-			<div class="chance12"><h1>CHANCE</h1>
-				<p>GO BACK THREE SPACES.</p>
-			</div>
-
-
-
-
-			<div class="chance13"><h1>CHANCE</h1>
-				<p>ADVANCE TO THE NEAREST<BR>DATA-CENTRE</p>
-				<p>If owned, give the owner twice the data amount to which they are otherwise entitled.</p>
-			</div>
-
-
-
-
-			<div class="chance14"><h1>CHANCE</h1>
-				<h5>ADVANCE TO GO COLLECT 200 GB.</h5>
-			</div>
-	-->
-
-
-	
-			<div class="chance15"><h1>CHANCE</h1>
-				<p>ADVANCE TO <BR>IBM</p>
-			</div>
-		
-
-	</div>
-</body>
+  <head>
+    <title>Chance Cards</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+  </head>  
+  <body>
+    <div id="machine" class="container">
+      <div class="card">
+        <h1>1</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="card">
+        <h1>2</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="card">
+        <h1>3</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="card">
+        <h1>4</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="card">
+        <h1>5</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="card">
+        <h1>6</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <!-- Continue to add div class="card" below -->
+    </div>
+    <script src="js/slotmachine.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
