--- a/chance.html
+++ b/chance.html
@@ -34,7 +34,7 @@
       </div>
       <!-- Continue to add div class="card" below -->
     </div>
-    <script src="js/slotmachine.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="slotmachine.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
