--- a/chance.html
+++ b/chance.html
@@ -10,7 +10,11 @@
     <div id="machine" class="container">
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
+        <h2>PAY EACH
+          <BR>PLAYER
+          <BR><h3>50 GB</h3>
+        </h2>
       </div>
       <div class="card">
         <h1>CHANCE</h1>
