--- a/chance.html
+++ b/chance.html
@@ -8,6 +8,7 @@
   </head>  
   <body>
     <div id="machine" class="container">
+
       <div class="card">
         <h1>CHANCE</h1>
         <p>A TEAM HELPED YOU SET UP YOUR SMART OFFICE</p>
@@ -16,61 +17,89 @@
           <BR><h3>50 GB</h3>
         </h2>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>YOUR CLOUD RAN OUT OF DATA SPACE. PURCHASE MORE STORAGE</p>
+        <h3>PAY 100 GB.</h3>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>YOU RECENTLY UPDATED SOFTWARE ON ALL YOUR SMART DEVICES</p>
+        <h2>FOR EACH OFFICE</h2>
+          <BR><h3>PAY 25 GB.</h3>
+          <BR>
+          <BR><h2>FOR EACH HEADQUARTER,</h2>
+          <BR><h3>PAY 100 GB.</h3>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>PASSWORD TO HACK OUT OF CYBER SECURITY</p>
+        <h4>********</h4><BR><p>TAKE A SCREENSHOT. THE IMAGE CAN BE USED <span class="pbold">ONCE</span> TO GET OUT OF CYBER SECURITY.</p>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>GO TO CYBER SECURITY. DO NOT PASS GO.</p><h3>DO NOT<BR>COLLECT 200 GB.</h3>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>YOUR SMART OFFICE SET-UP INCREASED EFFICIENCY BY REDUCING ENERGY CONSUMPTION</p>
+        <h5>COLLECT 150 GB</h5>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>DATA GRAB!
+        <p>Take all GB 100 bills from the database, and throw them in the air!</p>
+          <p>All players race to catch them.</p>
+          <p>Keep what you catch.</p>
+        </P>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>TAKE A TRIP TO THE FACEBOOK DATA CENTRE.</p><BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>ADVANCE TO THE TESLA SHOWROOM.</p><BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>ADVANCE TO THE NEAREST WEB DOMAIN</p>
+        <p><span class="pbold">(.COM, .EDU)</span><BR>IF OWNED, PAY THE OWNER 10 TIMES YOUR ROLL</p>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>ADVANCEMENT TO ROYAL DUTCH SHELL.</p><BR><h5>IF YOU PASS GO COLLECT 200 GB.</h5> 
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>GO BACK THREE SPACES.</p>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>ADVANCE TO THE NEAREST<BR>DATA-CENTRE</p>
+        <p>If owned, give the owner twice the data amount to which they are otherwise entitled.</p>
       </div>
+
       <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h5>ADVANCE TO GO COLLECT 200 GB.</h5>
       </div>
+
         <div class="card">
         <h1>CHANCE</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>ADVANCE TO<BR>IBM</p>
       </div>
       <!-- Continue to add div class="card" below -->
     </div>
