--- a/chance.html
+++ b/chance.html
@@ -54,7 +54,7 @@
       <div class="card">
         <h1>CHANCE</h1>
         <p>DATA GRAB!
-        <p>Take all GB 100 bills from the database, and throw them in the air!</p>
+        <p>Take all GB 100 pieces from the database, and throw them in the air!</p>
           <p>All players race to catch them.</p>
           <p>Keep what you catch.</p>
         </P>
