--- a/community_chest.html
+++ b/community_chest.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <title>Community Chest</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+  </head>  
+  <body>
+    <div id="machine" class="container">
 
-<h1>My First Hethuidsifsading</h1>
-<p>My first paragraph.</p>
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU SWITCHED YOUR SOCIAL MEDIA SETTINGS FROM ‘PRIVATE TO ‘PUBLIC’</p>
+	    <br><h3>PAY 100 GB</h3>
+		</h2>
+      </div>
 
-</body>
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>AN ONLINE STALKER STOLE YOUR LOCATION DATA VIA YOUR SMART PHONE</p>
+        <BR><h3>PAY 100 GB</h3>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU ACCEPTED WEBSITE COOKIES ON 50 WEBSITES THIS PAST WEEK</p> 
+        <br><h3>PAY 50 GB</h3>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU FORGOT TO SIGN OUT OF YOUR EMAIL WHILE USING A PUBLIC COMPUTER</p>
+		<br><H3>PAY 100 GB</H3>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>Your Smart Office system has an unknown user sending instructions.
+		<BR><H3>PAY 40 GB</H3>
+		<BR><P>per Office and 115 GB per HQ you own for tighter security</p>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU RECENTLY GAVE OUT PERSONAL INFORMATION TO THE CENSES BUREAU</p>
+		<br><h3>PAY 20 GB</h3>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU’RE SETTING UP YOUR OWN START-UP AND YOU CONDUCTED CONSUMER RESEARCH</p>
+		<BR><h5>COLLECT 200 GB</h5>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU DEVELOPED A HACKER PROOF WEB BROWSER</p>
+		<BR><h5>COLLECT 25 GB USER FEE</h5> 
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOUR JOB AT THE FBI NEEDED YOU TO IMPLANT A BUG ON A SUSPECT’S SMART PHONE</p>
+		<BR><h5>COLLECT 10 GB</h5> 
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU SET UP A ‘LOCATION TRACKING’ SYSTEM AMONG YOUR FAMILY MEMBERS</p>
+		<br><H5>COLLECT 10 GB FROM EACH PLAYER</H5>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>REMOVE A PART OF YOUR GAME PLAYER’S BODY AND GIVE IT TO THE DATABASE</p>
+		<BR><h5>COLLECT 100 GB</h5> 
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>YOU WORK FOR THE GOVERNMENT AND NOW HAVE ACCESS TO POPULATION DNA DATABASE</p>
+		<BR><h5>COLLECT 50 GB</h5>
+      </div>
+
+      <div class="card">
+        <h1>COMMUNITY CHEST</h1>
+        <p>ADVANCE TO GO</p>
+		<BR><h5>COLLECT 200 GB</h5>
+      </div>
+
+      <div class="card">
+        <p>You requested to get all your data from social media and streaming services</p>
+		<BR><h5>COLLECT 100 GB</h5>
+      </div>
+
+        <div class="card">
+        <p>YOU RECENTLY LEARNT HOW TO HACK INTO COMPUTER NETWORKS</p><BR><h5>COLLECT 100 GB</h5>
+      </div>
+      <!-- Continue to add div class="card" below -->
+    </div>
+    <script src="slotmachine.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
