--- a/community_chest.html
+++ b/community_chest.html
@@ -86,7 +86,7 @@
       <div class="card">
         <h6>COMMUNITY<br>CHEST</h6>
         <p>ADVANCE TO GO</p>
-		<BR><h5>COLLECT 200 GB</h5>
+		<<h5>COLLECT 200 GB</h5>
       </div>
 
       <div class="card">
