--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p><a href="chance.html">CHANCE</a></p>
 <br>
 <br>
-<p><a href="Community_chest.html">COMMUNITY CHEST</a></p>
+<p><a href="community_chest.html">COMMUNITY CHEST</a></p>
 </body>
 </html>
 
